<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.arblib</groupId>
  <artifactId>arb4j</artifactId>
  <version>0.85</version>
  <properties>
    <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
    <mdep.outputFile>class.path</mdep.outputFile>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <compilerArgs>--enable-preview</compilerArgs>

        </configuration>
      </plugin>


      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.5.0</version>
        <configuration>
          <show>public</show>
          <stylesheetfile>stylesheet.css</stylesheetfile>
          <doclint>none</doclint>
          <additionalJOptions>
            <additionalJOption>--enable-preview</additionalJOption>
          </additionalJOptions>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <argLine>-ea --enable-native-access=arb4j --enable-preview
            -Djava.library.path=.</argLine>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>9.6</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <dependencies>

    <dependency>
      <groupId>org.fxyz3d</groupId>
      <artifactId>fxyz3d</artifactId>
      <version>0.6.0</version>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>9.6</version>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-commons</artifactId>
      <version>9.6</version>
    </dependency>
    <dependency>
      <groupId>eu.hoefel</groupId>
      <artifactId>jatex</artifactId>
      <version>1.3.4</version>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-util</artifactId>
      <version>9.6</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-base</artifactId>
      <version>21.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-swing</artifactId>
      <version>21.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>21.0.1</version>
    </dependency>
    <dependency>
      <groupId>com.massisframework</groupId>
      <artifactId>j-text-utils</artifactId>
      <version>0.3.4</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.11</version>
    </dependency>
    <dependency>
      <groupId>org.scilab.forge</groupId>
      <artifactId>jlatexmath</artifactId>
      <version>1.0.7</version>
    </dependency>
    <dependency>
      <groupId>io.fair-acc</groupId>
      <artifactId>chartfx</artifactId>
      <version>11.3.0</version>
    </dependency>
    <dependency>
      <groupId>io.fair-acc</groupId>
      <artifactId>bench</artifactId>
      <version>11.3.0</version>
    </dependency>
    <dependency>
      <groupId>org.vineflower</groupId>
      <artifactId>vineflower</artifactId>
      <version>1.9.3</version>
    </dependency>
    <dependency>
      <groupId>org.controlsfx</groupId>
      <artifactId>controlsfx</artifactId>
      <version>11.2.0</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
    </dependency>
  </dependencies>
  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>sonatype</id>
      <name>sonatype</name>
      <url>https://oss.sonatype.org/content/repositories/releases</url>
    </repository>
    <repository>
      <id>spinyowl</id>
      <url>https://raw.github.com/SpinyOwl/repo/releases</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>j3d</id>
      <url>https://maven.jzy3d.org/releases/</url>
    </repository>
    <repository>
      <id>amelentev</id>
      <url>https://amelentev.github.io/mvnrepo/</url>
    </repository>
    <repository>
      <id>central</id>
      <name>Maven Repository Switchboard</name>
      <url>https://repo1.maven.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>oracleReleases</id>
      <name>Oracle Released Java Packages</name>
      <url>https://download.oracle.com/maven</url>
      <layout>default</layout>
    </repository>
  </repositories>

</project>